<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GymNote</string>
    <string name="trainingTitle">Тренировки</string>
    <string name="exerciseTitle">Упражнения</string>
    <string name="gagingTitle">Замеры</string>
    <string name="statisticsTitle">Статистика</string>
    <string name="chatTitle">Чат</string>
    <string name="profile">Профиль</string>
    <string name="begin_training">Начать тренировку</string>
    <string name="resume_training">Продолжить тренировку</string>
    <string name="title_activity_new_training_ex">Активная тренировка</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_ex_list_for_training">Список упражнений</string>
    <string name="add_ex">Добавить упражнение</string>
    <string name="end_training">Завершить тренировку</string>
    <string name="title_activity_new_training_set">Активная тренировка</string>
    <string name="add_set">Добавить подход</string>
    <string name="title_activity_training_list">Проведенные тренировки</string>
    <string name="title_activity_ex_list">Список упражнений</string>
    <string name="add_new_ex">Добавить упражнение</string>
    <string name="edit_ex_set">Сохранить</string>
    <string name="drop_ex_set">Удалить</string>
    <string name="title_activity_gaging">Замеры</string>
    <string name="title_activity_statistics">Статистика</string>
    <string name="set_count">Количество повторений</string>
    <string name="weight_count">Поднятые кг.</string>
    <string name="intensity">Общий тоннаж(кг.) - </string>
    <string name="intensity_stat">Общий тоннаж(кг.)</string>
		<string name="value_type">Выводимые данные</string>
    <string name="max_weight_stat">Максимальний вес</string>
    <string name="KPS">КПШ - </string>
    <string name="set">повторения</string>
    <string name="weight">вес</string>
    <string name="add_set_bt">Добавить</string>
    <string name="title_activity_resume_training_ex">Активная тренировка</string>
    <string name="no_end_training">Пока не завершено ни одной тренировки</string>
    <string name="drop_ex_on_traoning">Удалить упражнение</string>
    <string name="drop_traoning">Удалить тренировку</string>
    <string name="title_activity_training_ex_description">Отчет по упражнению</string>
    <string name="no_sets_on_ex">В упражнении не было подходов!</string>
    <string name="title_activity_ex_item_description">Описание упражнения</string>
    <string name="group_muscle">Группа мышц</string>
    <string name="ex_title">Название упражнения</string>
    <string name="period">За какое время</string>
    <string name="edit_ex">Редактировать упражнение</string>
    <string name="title_activity_user_size">Замеры</string>
    <string name="add_profile">Добавить профиль</string>
    <string name="add_profile_value">Изменить значение</string>
    <string name="title_activity_user_profile">Список профилей</string>
    <string name="profile_label_btn">Название профиля</string>
    <string name="hello_world">Hello world!</string>
    <string name="training_count">Количество тренировок</string>
    <string name="last_training_time">Последняя тренировка</string>
    <string name="user_weight">Вес</string>
    <string name="user_heidht">Рост</string>
    <string name="index_user">ИМТ</string>
    <string name="no_profiles">Пока не создано ни одного профиля.</string>
    <string name="drop_profile_btn">Удалить профиль</string>
    <string name="title_activity_user_profile_item">Описание профиля</string>
    <string name="confirmation_message">Вы действительно хотите удалить?</string>
	<string name="confirmation_message_finish_training">Вы действительно хотите завершить тренировку?</string>
	<string name="search">Найти</string>

    <string name="confirmation_yes">Подтвердить</string>
    <string name="confirmation_no">Отмена</string>

	<string name="imt_description_1">Выраженный дефицит массы тела</string>
	<string name="imt_description_2">Недостаточная (дефицит) масса тела</string>
	<string name="imt_description_3">Норма</string>
	<string name="imt_description_4">Избыточная масса тела (предожирение)</string>
	<string name="imt_description_5">Ожирение первой степени</string>
	<string name="imt_description_6">Ожирение второй степени</string>
	<string name="imt_description_7">Ожирение третьей степени (морбидное)</string>

</resources>
