<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MyActivity" >
	<item android:id="@+id/training"
				android:title="@string/trainingTitle"
				android:orderInCategory="100"
				app:showAsAction="never" />
	<item android:id="@+id/exercise"
				android:title="@string/exerciseTitle"
				android:orderInCategory="100"
				app:showAsAction="never" />
	<item android:id="@+id/gaging"
				android:title="@string/gagingTitle"
				android:orderInCategory="100"
				app:showAsAction="never" />
	<item android:id="@+id/statistics"
				android:title="@string/statisticsTitle"
				android:orderInCategory="100"
				app:showAsAction="never" />
	<item android:id="@+id/profile"
				android:title="@string/title_activity_user_profile"
				android:orderInCategory="100"
				app:showAsAction="never" />
	<!--item android:id="@+id/profile"
				android:enabled="false"
				android:title="@string/profile"
				android:orderInCategory="100"
				app:showAsAction="never" /-->
</menu>
