<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
							android:orientation="vertical"
							android:layout_width="fill_parent"
							android:padding="@dimen/activity_horizontal_margin"
							android:background="@color/app_background"
							android:layout_height="wrap_content">
	<TextView
		android:id="@+id/textView1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="4dp"
		android:layout_marginRight="4dp"
		android:text="Количество поднятых раз" />

	<EditText
		android:id="@+id/repetition"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="4dp"
		android:layout_marginLeft="4dp"
		android:layout_marginRight="4dp"
		android:layout_marginTop="4dp"
		android:layout_weight="1"
		android:ems="10"
		android:hint="@string/set"
		android:inputType="text|number" />

	<TextView
		android:id="@+id/textView2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="4dp"
		android:layout_marginRight="4dp"
		android:text="Количество поднятых кг." />

	<EditText
		android:id="@+id/weight"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="16dp"
		android:layout_marginLeft="4dp"
		android:layout_marginRight="4dp"
		android:layout_marginTop="4dp"
		android:ems="10"
		android:fontFamily="sans-serif"
		android:hint="@string/weight"
		android:inputType="text|number" />

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<Button
			android:layout_width="match_parent"
			android:layout_height="40dp"
			android:text="@string/drop_ex_set"
			android:minHeight="40dp"
			android:textColor="@color/button_text_color"
			android:background="@drawable/btn_selector"
			android:id="@+id/dropBtn"
			android:layout_marginRight="3dp"
			android:layout_weight="1"/>
		<Button
			android:layout_width="match_parent"
			android:layout_height="40dp"
			android:text="@string/edit_ex_set"
			android:onClick="addBtn"
			android:minHeight="40dp"
			android:layout_marginLeft="3dp"
			android:textColor="@color/button_text_color"
			android:background="@drawable/btn_selector"
			android:id="@+id/editBtn"
			android:layout_weight="1"/>


	</LinearLayout>

</LinearLayout>