<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
		android:background="@color/app_background"
    tools:context=".MyActivity">


	<Button
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/begin_training"
		android:textSize="30dp"
		android:textColor="@color/button_text_color"
		android:id="@+id/button01"
		android:layout_marginLeft="@dimen/activity_vertical_margin"
		android:layout_marginRight="@dimen/activity_vertical_margin"
		android:layout_alignParentBottom="true"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:background="@drawable/btn_selector"
		android:minHeight="100dp"
		android:gravity="center_vertical|center_horizontal"
		android:onClick="newTraining"/>

	<Button
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/resume_training"
		android:textSize="30dp"
		android:textColor="@color/button_text_color"
		android:id="@+id/button02"
		android:layout_marginLeft="@dimen/activity_vertical_margin"
		android:layout_marginRight="@dimen/activity_vertical_margin"
		android:layout_alignParentBottom="true"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:background="@drawable/btn_selector"
		android:minHeight="100dp"
		android:visibility="gone"
		android:gravity="center_vertical|center_horizontal"
		android:onClick="resumeTraining"/>

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="top"
		android:background="@color/other_color"
		android:layout_alignParentTop="true"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:id="@+id/linearLayout2">

		<LinearLayout
			android:orientation="horizontal"
			android:background="@color/app_background"
			android:layout_marginBottom="2dp"
			android:paddingLeft="@dimen/activity_vertical_margin"
			android:paddingRight="@dimen/activity_vertical_margin"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/training_count"
				android:textSize="18dp"
				android:id="@+id/textView"
				android:layout_alignParentTop="true"
				android:layout_alignParentLeft="true"
				android:layout_alignParentStart="true"/>

			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="right">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="New Text"
					android:textSize="18dp"
					android:id="@+id/trainingCount"
					android:gravity="right"/>
			</LinearLayout>
		</LinearLayout>

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:id="@+id/linearLayout"
			android:background="@color/app_background"
			android:layout_marginBottom="2dp"
			android:paddingLeft="@dimen/activity_vertical_margin"
			android:paddingRight="@dimen/activity_vertical_margin"
			android:layout_below="@+id/linearLayout2"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/last_training_time"
				android:textSize="18dp"
				android:id="@+id/textView3"
				android:layout_alignParentTop="true"
				android:layout_alignParentLeft="true"
				android:layout_alignParentStart="true"/>

			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="right">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="New Text"
					android:textSize="18dp"
					android:id="@+id/lastTraining"
					android:gravity="right"/>
			</LinearLayout>
		</LinearLayout>

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:id="@+id/linearLayout4"
			android:background="@color/app_background"
			android:layout_marginBottom="2dp"
			android:paddingLeft="@dimen/activity_vertical_margin"
			android:paddingRight="@dimen/activity_vertical_margin"
			android:layout_below="@+id/linearLayout2"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/user_weight"
				android:textSize="18dp"
				android:id="@+id/textView7"
				android:layout_alignParentTop="true"
				android:layout_alignParentLeft="true"
				android:layout_alignParentStart="true"/>

			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="right">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="New Text"
					android:textSize="18dp"
					android:id="@+id/weightCount"
					android:gravity="right"/>
			</LinearLayout>
		</LinearLayout>

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:id="@+id/linearLayout5"
			android:background="@color/app_background"
			android:layout_marginBottom="2dp"
			android:paddingLeft="@dimen/activity_vertical_margin"
			android:paddingRight="@dimen/activity_vertical_margin"
			android:layout_below="@+id/linearLayout2"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/user_heidht"
				android:textSize="18dp"
				android:id="@+id/textView9"
				android:layout_alignParentTop="true"
				android:layout_alignParentLeft="true"
				android:layout_alignParentStart="true"/>

			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="right">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="New Text"
					android:textSize="18dp"
					android:id="@+id/heightCount"
					android:gravity="right"/>
			</LinearLayout>
		</LinearLayout>

		<!--LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:id="@+id/linearLayout3"
			android:background="@color/app_background"
			android:layout_marginBottom="2dp"
			android:paddingLeft="@dimen/activity_vertical_margin"
			android:paddingRight="@dimen/activity_vertical_margin"
			android:layout_below="@+id/linearLayout2"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/index_user"
				android:textSize="18dp"
				android:id="@+id/textView5"
				android:layout_alignParentTop="true"
				android:layout_alignParentLeft="true"
				android:layout_alignParentStart="true"/>

			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="right">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="New Text"
					android:textSize="18dp"
					android:id="@+id/IMT"
					android:gravity="right"/>
			</LinearLayout>
		</LinearLayout-->

	</LinearLayout>

</RelativeLayout>
