<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
		android:background="@color/app_background"
    tools:context="com.feboll.gymnote.Statistics">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/group_muscle"
            android:id="@+id/textView"
            android:textSize="18dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/groupS"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>
    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout2">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ex_title"
            android:textSize="18dp"
            android:id="@+id/textView2"
            android:layout_below="@+id/groupS"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/exS"
            android:layout_below="@+id/textView2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_type"
            android:textSize="18dp"
            android:id="@+id/textView3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/value_type" />
    </LinearLayout>

    <LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
        android:background="@color/button_background"
		android:layout_alignParentRight="true"
		android:padding="2dp"
		android:layout_alignParentEnd="true"
        android:layout_below="@+id/linearLayout3">

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_alignParentLeft="true"
			android:background="@color/app_background"
			android:layout_alignParentStart="true"
			android:minHeight="150dp"
			android:id="@+id/graph"
			android:layout_below="@+id/exS">
		</LinearLayout>
	</LinearLayout>

</RelativeLayout>
