<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
		android:background="@color/app_background"
    tools:context="com.feboll.gymnote.NewTrainingSet">


	<ListView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:id="@+id/setList"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:layout_below="@+id/linearLayout2"
		android:layout_above="@+id/mainLayout"/>

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
								xmlns:ads="http://schemas.android.com/apk/res-auto"
								android:orientation="vertical"
								android:layout_width="fill_parent"
								android:layout_height="wrap_content"
								android:id="@+id/mainLayout"
								android:layout_above="@+id/button05"
								android:layout_alignParentLeft="true"
								android:layout_alignParentStart="false">
		<com.google.android.gms.ads.AdView android:id="@+id/adView"
																			 android:layout_width="fill_parent"
																			 android:layout_height="6dp"
																			 ads:adUnitId="ca-app-pub-5748071594809710/2182312782"
																			 ads:adSize="BANNER"
																			 android:layout_margin="0dp"/>
	</LinearLayout>
	<Button
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:minHeight="50dp"
		android:layout_marginLeft="@dimen/activity_horizontal_margin"
		android:layout_marginRight="@dimen/activity_horizontal_margin"
		android:layout_marginTop="5dp"
		android:text="@string/add_set"
		android:id="@+id/button05"
		android:background="@drawable/btn_selector"
		android:textColor="@color/button_text_color"
		android:textSize="20dp"
		android:layout_alignParentBottom="true"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:onClick="addSet"/>

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:background="@color/other_color"
		android:id="@+id/linearLayout"
		>

		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="New Text"
			android:id="@+id/exTitle"
			android:layout_alignParentTop="true"
			android:background="@color/app_background"
			android:layout_marginBottom="3dp"
			android:textSize="20dp"
			android:paddingLeft="@dimen/activity_horizontal_margin"
			android:paddingRight="@dimen/activity_horizontal_margin"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			android:gravity="center"/>
	</LinearLayout>

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/linearLayout"
		android:layout_alignParentRight="true"
		android:background="@color/other_color"
		android:layout_alignParentEnd="true"
		android:id="@+id/linearLayout2">

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:paddingLeft="@dimen/activity_horizontal_margin"
			android:paddingRight="@dimen/activity_horizontal_margin"
			android:layout_marginBottom="1dp"
			android:background="@color/app_background"
			android:layout_height="wrap_content">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/intensity"
				android:id="@+id/textView2"
				android:layout_below="@+id/linearLayout"
				android:textSize="16dp"
				android:layout_alignParentLeft="true"
				android:layout_alignParentStart="true"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="New Text"
				android:textSize="16dp"
				android:layout_marginLeft="5dp"
				android:id="@+id/tonaj"/>
		</LinearLayout>

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:paddingLeft="@dimen/activity_horizontal_margin"
			android:paddingRight="@dimen/activity_horizontal_margin"
			android:layout_marginBottom="3dp"
			android:background="@color/app_background"
			android:layout_height="fill_parent">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/KPS"
				android:textSize="16dp"
				android:id="@+id/textView4"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="New Text"
				android:layout_marginLeft="5dp"
				android:textSize="16dp"
				android:id="@+id/kps"/>
		</LinearLayout>
	</LinearLayout>

</RelativeLayout>
